--- a/environment.yaml
+++ b/environment.yaml
@@ -4,185 +4,12 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - appdirs=1.4.4=pyh9f0ad1d_0
-  - asttokens=2.2.1=pyhd8ed1ab_0
-  - backcall=0.2.0=pyh9f0ad1d_0
-  - backports=1.0=pyhd8ed1ab_3
-  - backports.functools_lru_cache=1.6.4=pyhd8ed1ab_0
-  - black=23.1.0=py310h5588dad_0
-  - boost-cpp=1.72.0=h5b4e17d_7
-  - brotli=1.0.9=hcfcfb64_8
-  - brotli-bin=1.0.9=hcfcfb64_8
-  - brotlipy=0.7.0=py310h8d17308_1005
-  - bzip2=1.0.8=h8ffe710_4
-  - ca-certificates=2022.12.7=h5b45459_0
-  - certifi=2022.12.7=pyhd8ed1ab_0
-  - cffi=1.15.1=py310h628cb3f_3
-  - charset-normalizer=2.1.1=pyhd8ed1ab_0
-  - click=8.1.3=win_pyhd8ed1ab_2
-  - colorama=0.4.6=pyhd8ed1ab_0
-  - comm=0.1.2=pyhd8ed1ab_0
-  - conda=22.11.1=py310h5588dad_1
-  - conda-package-handling=2.0.2=pyh38be061_0
-  - conda-package-streaming=0.7.0=pyhd8ed1ab_1
-  - contourpy=1.0.7=py310h232114e_0
-  - cryptography=39.0.1=py310h6e82f81_0
-  - cspice-cmake=66=h0a763a3_5
-  - cycler=0.11.0=pyhd8ed1ab_0
-  - debugpy=1.6.6=py310h00ffb61_0
-  - decorator=5.1.1=pyhd8ed1ab_0
-  - executing=1.2.0=pyhd8ed1ab_0
-  - fmt=9.1.0=h181d51b_0
-  - fonttools=4.38.0=py310h8d17308_1
-  - freetype=2.12.1=h546665d_1
-  - gettext=0.21.1=h5728263_0
-  - glib=2.74.1=h12be248_1
-  - glib-tools=2.74.1=h12be248_1
-  - gst-plugins-base=1.22.0=h001b923_0
-  - gstreamer=1.22.0=h6b5321d_0
-  - icu=70.1=h0e60522_0
-  - idna=3.4=pyhd8ed1ab_0
-  - importlib-metadata=6.0.0=pyha770c72_0
-  - importlib_metadata=6.0.0=hd8ed1ab_0
-  - intel-openmp=2023.0.0=h57928b3_25922
-  - ipykernel=6.21.2=pyh025b116_0
-  - ipython=8.11.0=pyh08f2357_0
-  - jedi=0.18.2=pyhd8ed1ab_0
-  - jinja2=3.1.2=pyhd8ed1ab_1
-  - jpeg=9e=hcfcfb64_3
-  - jupyter_client=8.0.3=pyhd8ed1ab_0
-  - jupyter_core=5.2.0=py310h5588dad_0
-  - kiwisolver=1.4.4=py310h232114e_1
-  - krb5=1.20.1=heb0366b_0
-  - lcms2=2.14=ha5c8aab_1
-  - lerc=4.0.0=h63175ca_0
-  - libarchive=3.6.2=h27c7867_0
-  - libblas=3.9.0=16_win64_mkl
-  - libbrotlicommon=1.0.9=hcfcfb64_8
-  - libbrotlidec=1.0.9=hcfcfb64_8
-  - libbrotlienc=1.0.9=hcfcfb64_8
-  - libcblas=3.9.0=16_win64_mkl
-  - libclang=15.0.7=default_h77d9078_1
-  - libclang13=15.0.7=default_h77d9078_1
-  - libcurl=7.87.0=h68f0423_0
-  - libdeflate=1.17=hcfcfb64_0
-  - libffi=3.4.2=h8ffe710_5
-  - libglib=2.74.1=he8f3873_1
-  - libhwloc=2.8.0=h039e092_1
-  - libiconv=1.17=h8ffe710_0
-  - liblapack=3.9.0=16_win64_mkl
-  - libmamba=1.3.1=h8a7d157_1
-  - libmambapy=1.3.1=py310h3fe4c2e_1
-  - libogg=1.3.4=h8ffe710_1
-  - libpng=1.6.39=h19919ed_0
-  - libsodium=1.0.18=h8d14728_1
-  - libsolv=0.7.23=h12be248_0
-  - libsqlite=3.40.0=hcfcfb64_0
-  - libssh2=1.10.0=h9a1e1f7_3
-  - libtiff=4.5.0=hf8721a0_2
-  - libvorbis=1.3.7=h0e60522_0
-  - libwebp-base=1.2.4=h8ffe710_0
-  - libxcb=1.13=hcd874cb_1004
-  - libxml2=2.10.3=hc3477c8_0
-  - libzlib=1.2.13=hcfcfb64_4
-  - lz4-c=1.9.4=hcfcfb64_0
-  - lzo=2.10=he774522_1000
-  - m2w64-gcc-libgfortran=5.3.0=6
-  - m2w64-gcc-libs=5.3.0=7
-  - m2w64-gcc-libs-core=5.3.0=7
-  - m2w64-gmp=6.1.0=2
-  - m2w64-libwinpthread-git=5.0.0.4634.697f757=2
-  - mamba=1.3.1=py310hd9d798f_1
-  - markupsafe=2.1.2=py310h8d17308_0
-  - matplotlib=3.6.3=py310h5588dad_0
-  - matplotlib-base=3.6.3=py310h51140c5_0
-  - matplotlib-inline=0.1.6=pyhd8ed1ab_0
-  - menuinst=1.4.19=py310h5588dad_1
-  - mkl=2022.1.0=h6a75c08_874
-  - msys2-conda-epoch=20160418=1
-  - munkres=1.1.4=pyh9f0ad1d_0
-  - mypy_extensions=1.0.0=pyha770c72_0
-  - nest-asyncio=1.5.6=pyhd8ed1ab_0
-  - nrlmsise-00=0.1=h0a763a3_1
-  - numpy=1.24.2=py310hd02465a_0
-  - openjpeg=2.5.0=ha2aaf27_2
-  - openssl=3.0.8=hcfcfb64_0
-  - packaging=23.0=pyhd8ed1ab_0
-  - pandas=1.5.3=py310h1c4a608_0
-  - parso=0.8.3=pyhd8ed1ab_0
-  - pathspec=0.11.0=pyhd8ed1ab_0
-  - pcre2=10.40=h17e33f8_0
-  - pickleshare=0.7.5=py_1003
-  - pillow=9.4.0=py310hdbb7713_1
-  - pip=23.0=pyhd8ed1ab_0
-  - platformdirs=3.0.0=pyhd8ed1ab_0
-  - pluggy=1.0.0=pyhd8ed1ab_5
-  - ply=3.11=py_1
-  - pooch=1.6.0=pyhd8ed1ab_0
-  - prompt-toolkit=3.0.38=pyha770c72_0
-  - prompt_toolkit=3.0.38=hd8ed1ab_0
-  - psutil=5.9.4=py310h8d17308_0
-  - pthread-stubs=0.4=hcd874cb_1001
-  - pthreads-win32=2.9.1=hfa6e2cd_3
-  - pure_eval=0.2.2=pyhd8ed1ab_0
-  - pybind11=2.10.3=py310h232114e_0
-  - pybind11-abi=4=hd8ed1ab_3
-  - pybind11-global=2.10.3=py310h232114e_0
-  - pycosat=0.6.4=py310h8d17308_1
-  - pycparser=2.21=pyhd8ed1ab_0
-  - pygments=2.14.0=pyhd8ed1ab_0
-  - pyopenssl=23.0.0=pyhd8ed1ab_0
-  - pyparsing=3.0.9=pyhd8ed1ab_0
-  - pyqt=5.15.7=py310h1fd54f2_3
-  - pyqt5-sip=12.11.0=py310h00ffb61_3
-  - pysocks=1.7.1=pyh0701188_6
-  - python=3.10.9=h4de0772_0_cpython
-  - python-dateutil=2.8.2=pyhd8ed1ab_0
-  - python_abi=3.10=3_cp310
-  - pytz=2022.7.1=pyhd8ed1ab_0
-  - pywin32=304=py310h00ffb61_2
-  - pyzmq=25.0.0=py310hcd737a0_0
-  - qt-main=5.15.8=h720456b_6
-  - reproc=14.2.4=hcfcfb64_0
-  - reproc-cpp=14.2.4=h63175ca_0
-  - requests=2.28.2=pyhd8ed1ab_0
-  - ruamel.yaml=0.17.21=py310h8d17308_2
-  - ruamel.yaml.clib=0.2.7=py310h8d17308_1
-  - scipy=1.10.0=py310h578b7cb_2
-  - setuptools=67.1.0=pyhd8ed1ab_0
-  - sip=6.7.7=py310h00ffb61_0
-  - six=1.16.0=pyh6c4a22f_0
-  - sofa-cmake=1.0.0=h7dfa325_6
-  - stack_data=0.6.2=pyhd8ed1ab_0
-  - tabulate=0.9.0=pyhd8ed1ab_1
-  - tbb=2021.7.0=h91493d7_1
-  - tk=8.6.12=h8ffe710_0
-  - toml=0.10.2=pyhd8ed1ab_0
-  - tomli=2.0.1=pyhd8ed1ab_0
-  - toolz=0.12.0=pyhd8ed1ab_0
-  - tornado=6.2=py310h8d17308_1
-  - tqdm=4.64.1=pyhd8ed1ab_0
-  - traitlets=5.9.0=pyhd8ed1ab_0
-  - tudat=2.12.0=hc0c6cd2_2
-  - tudat-resources=2.0=h2728a80_1
-  - tudatpy=0.7.2=py310hd2a1498_2
-  - typing-extensions=4.4.0=hd8ed1ab_0
-  - typing_extensions=4.4.0=pyha770c72_0
-  - tzdata=2022g=h191b570_0
-  - ucrt=10.0.22621.0=h57928b3_0
-  - unicodedata2=15.0.0=py310h8d17308_0
-  - urllib3=1.26.14=pyhd8ed1ab_0
-  - vc=14.3=hb6edc58_10
-  - vs2015_runtime=14.34.31931=h4c5c07a_10
-  - wcwidth=0.2.6=pyhd8ed1ab_0
-  - wheel=0.38.4=pyhd8ed1ab_0
-  - win_inet_pton=1.1.0=pyhd8ed1ab_6
-  - xorg-libxau=1.0.9=hcd874cb_0
-  - xorg-libxdmcp=1.1.3=hcd874cb_0
-  - xz=5.2.6=h8d14728_0
-  - yaml-cpp=0.7.0=h63175ca_2
-  - zeromq=4.3.4=h0e60522_1
-  - zipp=3.15.0=pyhd8ed1ab_0
-  - zstandard=0.19.0=py310h0009e47_1
-  - zstd=1.5.2=h12be248_6
-prefix: C:\Users\trist\miniconda3\envs\tudat-space
+  - black
+  - ipykernel
+  - mamba
+  - tudatpy
+  - matplotlib
+  - scipy
+  - pandas
+  - tqdm
+  - pygmo
